--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                   ><!--style="color:white; border:1px;"-->
                   <div>
                     <img
-                      src="assets/logo.png"
+                      src="https://raw.githubusercontent.com/willy90510/test/master/src/assets/logo.png"
                       alt="no"
                       width="45"
                       height="45"
@@ -51,41 +51,32 @@
             <div class="Body2-2">
               <div class="Body2-1">
                 <div>
-                  <img
-                    class="photo"
-                    src="https://github.com/willy90510/github2/blob/43bec4d40497c8698db14f8be9daaeac3cad3893/src/assets/logo.png"
-                    alt="no"
-                  />
+                  <img  class="photo" src="https://raw.githubusercontent.com/willy90510/test/master/src/assets/self001.jpg" alt="picture">
                 </div>
                 <div class="selfsay">
                   <h1>自我介紹:</h1>
-                  <div style="line-height: 100%; border: 1px">
+                  <div style="line-height: 150%; border: 1px">
                     <h3>
                       <p>
-                        &nbsp;&nbsp;&nbsp;&nbsp;我名叫洪祥維，今年即將畢業於長榮大學資工系，擅長Python與Android
-                        studio。
+                        &nbsp;&nbsp;&nbsp;&nbsp;我名叫洪祥維，今年即將畢業於長榮大學資工系，擅長Python與Android studio。
                       </p>
                       <p>
                         在學校，大一的我是桌球社社員，大二曾擔任過班上的總務股長。
                       </p>
                       <p>
-                        過去我在大一、大二的寒暑假時去到金門當地的建築公司打工，打工期間累積了不少土木相關知識和程式操作的技能，比如:Auto
-                        CAD,Excel和 Movavi
-                        Video等操作，並且為公司製作介紹工程材料的短影片給股東們介紹，獲得到不少好評。
+                        過去我在大一、大二的寒暑假時去到金門當地的建築公司打工，打工期間累積了不少土木相關知識和程式操作的技能，比如:Auto CAD,Excel和 Movavi Video等操作，並且為公司製作介紹工程材料的短影片給股東們介紹，獲得到不少好評。
                       </p>
                       <p>
                         第一次接觸網頁前端是大學二年級在課程當中學到,並且最後有製作出一個簡單小成品。
                       </p>
                       <p>
-                        第一次接觸Android
-                        studio也是在大學二年級在課程當中學到，後續也有製作些許簡單小成品。
+                        第一次接觸Android studio也是在大學二年級在課程當中學到，後續也有製作些許簡單小成品。
                       </p>
                       <p>
                         在大四上學時，接觸Line機器人，並為了兩座廟宇製造Line機器人負責解其籤詩。
                       </p>
                       <p>
-                        在就學期間除了學習了資訊工程相關技能，還學習了Maya建模、使用Unity製作遊戲和Photo
-                        Shope技術外加Adobe Illustrator美工。
+                        在就學期間除了學習了資訊工程相關技能，還學習了Maya建模、使用Unity製作遊戲和Photo Shope技術外加Adobe Illustrator美工。
                       </p>
                       <p>
                         並且，還學習了操做Arduino去使用ESP32-CAM、基礎模板和ESP32添加其他附加模組
@@ -98,11 +89,7 @@
                   <div class="section text-h-center text-v-center">
                     <p>關於我：</p>
                     <div
-                      style="
-                        line-height: 100%;
-                        font-size: 2%;
-                        border: 1px #ccc solid;
-                      "
+                      style="line-height: 150%; font-size: 2%; border: 1px #ccc solid;"
                     >
                       <br />
                       <p>喜歡挑戰，不怕吃苦</p>
@@ -128,7 +115,7 @@
           </div>
           <div class="Body3">
             <a name="a3" id="a3"></a>
-            <div class="Body3-2">
+            <!--<div class="Body3-2">
               <div class="Body3-1">
                 <div class="Body3-men">
                   <ul>
@@ -348,26 +335,26 @@
                         </a></h4>
                       </mat-tab>
                     </mat-tab-group>-->
-                    </div>
+                    <!--</div>
                     <div *ngSwitchDefault>
                       <div class="license1">
                         <img
-                          src="https://github.com/willy90510/github2/blob/43bec4d40497c8698db14f8be9daaeac3cad3893/src/assets/TQC%20Python%E5%B0%88%E6%A5%AD%E7%B4%9A.jpg"
+                          src="https://github.com/willy90510/test/blob/6263e577e59fe5176d8cc02401aeaaa7bb2480f3/src/assets/TQC%20Python%E5%B0%88%E6%A5%AD%E7%B4%9A.jpg"
                           alt="no"
                           width="100%"
                           height="405"
-                        /><!--width="607" height="405"-->
+                        />
                       </div>
                       <div class="license1-1">
                         <h5>TQC Python專業級</h5>
                       </div>
                       <div class="license2">
                         <img
-                          src="https://github.com/willy90510/github2/blob/43bec4d40497c8698db14f8be9daaeac3cad3893/src/assets/AI-900.png"
+                          src="https://github.com/willy90510/test/blob/6263e577e59fe5176d8cc02401aeaaa7bb2480f3/src/assets/AI-900.png"
                           alt="no"
                           width="100%"
                           height="405"
-                        /><!--width="607" height="405"-->
+                        />
                       </div>
                       <div class="license2-1">
                         <h5>Microsoft AI-900</h5>
@@ -377,19 +364,18 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
         <div class="Body4">
           <a name="a4" id="a4"></a>
           <div class="Body4-1">
             <div class="Body4-2-1">
               <img
-                src="https://github.com/willy90510/github2/blob/43bec4d40497c8698db14f8be9daaeac3cad3893/src/assets/%E6%A5%B5%E6%A8%82%E6%AE%BF.png"
+                src="https://raw.githubusercontent.com/willy90510/test/master/src/assets/%E6%A5%B5%E6%A8%82%E6%AE%BF.png"
                 alt="no"
                 title="極樂殿"
                 width="100%"
-                height="60%"
-              />
+                height="60%">
               <div class="Body4-2-1-1">
                 <h1><a style="color: white">極樂殿</a></h1>
                 <br />
@@ -398,12 +384,11 @@
             </div>
             <div class="Body4-2-2">
               <img
-                src="https://github.com/willy90510/github2/blob/43bec4d40497c8698db14f8be9daaeac3cad3893/src/assets/%E5%8D%97%E5%A4%A9%E7%8D%85%E9%A0%AD%E5%B1%B1.png"
+                src="https://raw.githubusercontent.com/willy90510/test/master/src/assets/%E5%8D%97%E5%A4%A9%E7%8D%85%E9%A0%AD%E5%B1%B1.png"
                 alt="no"
                 title="南天獅頭山"
                 width="100%"
-                height="60%"
-              />
+                height="60%">
               <div class="Body4-2-2-1">
                 <h1><a style="color: white">獅頭山南天宮</a></h1>
                 <br />
@@ -416,7 +401,7 @@
                 ><img
                   src="http://www.web-counter.net/count_20091204.php?c=ani6ymgWfHJ"
                   style="border: 0; padding: 0; margin: 0"
-                  alt="计数器" /></a
+                  alt="计数器" ></a
               ><br />
             </div>
             <div class="mtime"></div>
@@ -427,7 +412,7 @@
           <div class="call">
             <p>
               <img
-                src="https://github.com/willy90510/github2/blob/43bec4d40497c8698db14f8be9daaeac3cad3893/src/assets/phone.png"
+                src="https://raw.githubusercontent.com/willy90510/test/master/src/assets/phone.png"
                 width="25px"
                 height="20px"
               /><a style="color: White">聯絡電話:</a>
@@ -440,7 +425,7 @@
                 href="https://www.facebook.com/profile.php?id=100006870456556"
                 style="color: white"
                 ><img
-                  src="https://github.com/willy90510/github2/blob/43bec4d40497c8698db14f8be9daaeac3cad3893/src/assets/fb.png"
+                  src="https://raw.githubusercontent.com/willy90510/test/master/src/assets/fb.png"
                   width="25px"
                   height="25px"
                 />FaseBook</a
@@ -453,7 +438,7 @@
                 href="https://www.youtube.com/channel/UCxOBrAmY_sbqeOTlecWn_hw"
                 style="color: white"
                 ><img
-                  src="https://github.com/willy90510/github2/blob/43bec4d40497c8698db14f8be9daaeac3cad3893/src/assets/yt.png"
+                  src="https://raw.githubusercontent.com/willy90510/test/master/src/assets/yt.png"
                   width="25px"
                   height="25px"
                 />You Tube</a
