--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,7 @@
           <div class="navbar">
             <div class="container">
               <div class="logo">
-                <a href="#"
-                  ><!--style="color:white; border:1px;"-->
+                <a href="#">
                   <div>
                     <img
                       src="https://raw.githubusercontent.com/willy90510/test/master/src/assets/logo.png"
@@ -42,7 +41,6 @@
           <div class="Body1">
             <div class="Body1-1">
               <div class="pv">
-                <!--<img src="assets/程式.jpg"  style="margin-top:-50px" alt="no" width="100%" height="730">-->
               </div>
             </div>
             <a name="a2" id="a2"></a>
