--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -111,8 +112,18 @@
               </div>
             </div>
           </div>
-          <div class="Body3">
-            <a name="a3" id="a3"></a>
+          <div class="Body3"><a name="a3" id="a3"></a>
+            <ul class="nav nav-pills">
+            <li [class.active]="viewMode=='map'"><a (click)="viewMode='map'">Map View</a></li>
+            <li [class.active]="viewMode=='list'"><a (click)="viewMode='list'">List View</a></li>
+          </ul>
+          <div [ngSwitch]="viewMode">
+            <div *ngSwitchCase="'map'">Map View Content</div>
+            <div *ngSwitchCase="'list'">List View Content</div>
+            <div *ngSwitchDefault>Otherwise</div>
+          </div>
+            
+
             
         </div>
         <div class="Body4">
